# BharatOS

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASES.md  SECURITY.md  package.json
ai/bharat-ai/: Cargo.toml
ai/bharat-ai/src/: lib.rs  main.rs  memory.rs
ai/voice-daemon/: Cargo.toml
ai/voice-daemon/src/: lib.rs  main.rs
apps/bharat-browser/: Cargo.toml
apps/bharat-browser/src/: lib.rs  main.rs
apps/calculator/: Cargo.toml
apps/calculator/src/: lib.rs  main.rs
apps/calendar/: Cargo.toml
apps/calendar/src/: lib.rs  main.rs
apps/camera/: Cargo.toml
apps/camera/src/: lib.rs  main.rs
apps/clock/: Cargo.toml
apps/clock/src/: lib.rs  main.rs
apps/display-manager/: Cargo.toml
apps/display-manager/src/: lib.rs  main.rs
apps/editor/: Cargo.toml
apps/editor/src/: lib.rs  main.rs
apps/file-manager/: Cargo.toml
apps/file-manager/src/: lib.rs  main.rs
apps/image-viewer/: Cargo.toml
apps/image-viewer/src/: lib.rs  main.rs
apps/music/: Cargo.toml
apps/music/src/: lib.rs  main.rs
apps/notes/: Cargo.toml
apps/notes/src/: lib.rs  main.rs
apps/pdf-reader/: Cargo.toml
apps/pdf-reader/src/: lib.rs  main.rs
apps/settings/: Cargo.toml
apps/settings/src/: lib.rs  main.rs
apps/sound/: Cargo.toml
apps/sound/src/: lib.rs  main.rs
apps/task-manager/: Cargo.toml
apps/task-manager/src/: lib.rs  main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: lib.rs  main.rs
apps/video/: Cargo.toml
apps/video/src/: lib.rs  main.rs
boot/: Cargo.toml
boot/src/: arch_detect.rs  bin.rs  lib.rs  main.rs
desktop/bharat-compositor/: Cargo.toml
desktop/bharat-compositor/src/: lib.rs  main.rs
desktop/boot-diagnostics/: Cargo.toml
desktop/boot-diagnostics/src/: lib.rs  main.rs
desktop/lib-sea/: Cargo.toml
desktop/lib-sea/src/: lib.rs  main.rs
desktop/satya-shell/: Cargo.toml
desktop/satya-shell/src/: lib.rs  main.rs
desktop/satya-theme/: Cargo.toml
desktop/satya-theme/src/: lib.rs  main.rs
devtools/bharat-debugger/: Cargo.toml
devtools/bharat-debugger/src/: lib.rs  main.rs
devtools/bharat-sdk/: Cargo.toml
devtools/bharat-sdk/src/: lib.rs  main.rs
docs/: AI.md  API.md  ARCHITECTURE.md  COMPILER.md  DESKTOP.md  FILESYSTEM.md  GAMING.md  HARDWARE.md  INDEX.md  KERNEL.md  POWER.md  ROADMAP.md  SECURITY.md  TRANSLATOR.md
fs/bharatfs/: Cargo.toml
fs/bharatfs/src/: lib.rs  main.rs
fs/mkfs-bharatfs/: Cargo.toml
fs/mkfs-bharatfs/src/: lib.rs  main.rs
fs/mount/: Cargo.toml
fs/mount/src/: lib.rs  main.rs
kernel/: Cargo.toml
kernel/src/: arch.rs  architecture.rs  bhfs.rs  boot.rs  devfs.rs  entry.rs  eventbus.rs  eventloop.rs  ipc.rs  lib.rs  loader.rs  lock.rs  lockdep.rs  logger.rs  main.rs  memory.rs  network.rs  oom.rs  paging.rs  power.rs  process.rs  procfs.rs  security.rs  signals_dispatch.rs  slab.rs  syscalls.rs  timer.rs  tmpfs.rs  utils.rs  vfs.rs  virtual.rs
libs/libaep/: Cargo.toml
libs/libaep/src/: gguf.rs  lib.rs  main.rs  model.rs  runtime.rs
libs/libaudio/: Cargo.toml
libs/libaudio/src/: lib.rs  main.rs
libs/libcore/: Cargo.toml
libs/libcore/src/: ai.rs  alloc.rs  arch.rs  audio.rs  debug.rs  env.rs  err.rs  event.rs  force_idle.rs  input.rs  interop.rs  io.rs  ipc.rs  keycodes.rs  lib.rs  math.rs  mem.rs  napi.rs  prelude.rs  process.rs  profile.rs  shader.rs  signals.rs  string.rs  surface.rs  sync.rs  text.rs  texture.rs  time.rs  trace.rs  tray.rs  window.rs
libs/libcore/src/security/: mod.rs
libs/libcore/src/text/: font.rs  layout.rs  shaping.rs
libs/libcrypto/: Cargo.toml
libs/libcrypto/src/: aes_gcm.rs  ed25519.rs  lib.rs  rand.rs  sha2.rs
libs/libelf/: Cargo.toml
libs/libelf/src/: lib.rs  main.rs
libs/libfs/: Cargo.toml
libs/libfs/src/: devfs.rs  ext4_compat.rs  lib.rs  main.rs  procfs.rs  vfs.rs
libs/libhal/: Cargo.toml
libs/libhal/src/: acpi.rs  apic.rs  audio.rs  cpu.rs  cpu_local.rs  device_tree.rs  dma.rs  eoi.rs  gpu.rs  hpet.rs  idt.rs  input.rs  interrupts.rs  iommu.rs  lib.rs  main.rs  msr.rs  net.rs  numa.rs  pcie.rs  pic.rs  pit.rs  pmu.rs  power.rs  ps2.rs  ring0.rs  sanskritify.rs  serial.rs  smp.rs  storage.rs  timer.rs  timing.rs  tsc.rs  usb.rs
libs/libhal/src/x86_64/: mod.rs
libs/libinput/: Cargo.toml
libs/libinput/src/: lib.rs  main.rs
libs/libmath/: Cargo.toml
libs/libmath/src/: lib.rs  main.rs
libs/libmm/: Cargo.toml
libs/libmm/src/: frame.rs  heap.rs  lib.rs  main.rs  slab.rs
libs/libnet/: Cargo.toml
libs/libnet/src/: lib.rs  main.rs
libs/libsched/: Cargo.toml
libs/libsched/src/: lib.rs  main.rs  process.rs  runqueue.rs  states.rs
libs/libsurface/: Cargo.toml
libs/libsurface/src/: compositor.rs  input.rs  lib.rs  main.rs  surface.rs
sbin/bharat-cryptsetup/: Cargo.toml
sbin/bharat-cryptsetup/src/: lib.rs  main.rs
sbin/bharat-fsck/: Cargo.toml
sbin/bharat-fsck/src/: lib.rs  main.rs
sbin/bharat-init/: Cargo.toml
sbin/bharat-init/src/: lib.rs  main.rs
sbin/bharat-pkg/: Cargo.toml
sbin/bharat-pkg/src/: lib.rs  main.rs
scripts/: build.sh  install.sh  run.sh  verify.sh
