[workspace]
members = [
    "ai/bharat-ai",
    "ai/voice-daemon",
    "apps/bharat-browser",
    "apps/calculator",
    "apps/calendar",
    "apps/camera",
    "apps/clock",
    "apps/display-manager",
    "apps/editor",
    "apps/file-manager",
    "apps/image-viewer",
    "apps/music",
    "apps/notes",
    "apps/pdf-reader",
    "apps/settings",
    "apps/sound",
    "apps/task-manager",
    "apps/terminal",
    "apps/video",
    "boot",
    "desktop/bharat-compositor",
    "desktop/boot-diagnostics",
    "desktop/lib-sea",
    "desktop/satya-shell",
    "desktop/satya-theme",
    "devtools/bharat-debugger",
    "devtools/bharat-sdk",
    "fs/bharatfs",
    "fs/mkfs-bharatfs",
    "fs/mount",
    "kernel",
    "libs/libaep",
    "libs/libaudio",
    "libs/libcore",
    "libs/libcrypto",
    "libs/libelf",
    "libs/libfs",
    "libs/libhal",
    "libs/libinput",
    "libs/libmath",
    "libs/libmm",
    "libs/libnet",
    "libs/libsched",
    "libs/libsurface",
    "sbin/bharat-cryptsetup",
    "sbin/bharat-fsck",
    "sbin/bharat-init",
    "sbin/bharat-pkg",
]

resolver = "2"

[workspace.dependencies]
# --- Shared dependencies ---
paste = "1.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
bitflags = "2.5"
arrayvec = "0.7"
hashbrown = "0.14"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
uart_16550 = "0.3"
pc-keyboard = "0.8"
noto-sans = "0.2"
rusttype = "0.9"
ttf-parser = "0.20"
png = "0.17"
raw-window-handle = "0.6"
ash = "0.38"
gpu-alloc = { version = "0.6", features = ["vulkan"] }
gpu-descriptor = { version = "0.3", features = ["vulkan"] }
zerocopy = "0.7"
bytemuck = { version = "1.14", features = ["derive"] }
heapless = "0.7"
postcard = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
crc32fast = "1.3"
sha2 = "0.10"
aes = "0.8"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["std", "serde"] }
ed25519-dalek = { version = "2.0", features = ["std", "serde"] }
base64 = "0.22"
ring = "0.17"
futures = { version = "0.3", default-features = false }
crossbeam = { version = "0.8", features = ["std"] }
tokio = { version = "1.37", features = [
    "macros", "rt-multi-thread", "time", "sync",
    "net", "signal", "process", "fs"
]}
reqwest = { version = "0.12", features = ["json", "blocking"] }
zip = { version = "0.6", features = ["deflate"] }
tar = "0.4"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
image = { version = "0.25", default-features = false, features = ["png"] }
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
wgpu = { version = "0.20" }
sdl2 = { version = "0.37", features = ["raw-window-handle", "bundled"] }
cpal = "0.15"
rodio = "0.17"
hound = "3.5"
winit = "0.30"
softbuffer = "0.3"
fontdb = "0.16"
lyon = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.kernel]
inherits = "release"
opt-level = "z"

[profile.embedded]
inherits = "kernel"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "all"
