[package]
name = "bharat-boot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS UEFI bootloader with Secure Boot, Fast Boot, multi-arch support (x86_64, ARM64, RISC-V)"

[dependencies]
uefi = { version = "0.26", features = ["alloc", "logger"] }
uefi-services = "0.24"
bitflags = "2.5"
arrayvec = "0.7"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
aarch64-paging = { version = "0.4", optional = true }
fdt-parser = { version = "0.3", optional = true }
scroll = { version = "0.11", optional = true }

[features]
default = ["x86_64"]
x86_64 = ["potatonet/default"]
aarch64 = ["aarch64-paging", "potatonet/default"]
riscv64 = ["potatonet/default"]

# Fallback minimal network stack for UEFI HTTP fallback
[dependencies.potatonet]
version = "0.4"
default-features = false
optional = true
