[package]
name = "bharat-clock"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS clock/alarm/timer app"
[dependencies]
bharat-libsurface = { path = "../../libs/libsurface" }
bharat-libcore = { path = "../../libs/libcore" }

[[bin]]
name = "clock"
path = "src/main.rs"
