[package]
name = "bharat-image-viewer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS image viewer"
[dependencies]
bharat-libsurface = { path = "../../libs/libsurface" }
bharat-libcore = { path = "../../libs/libcore" }
image = { version = "0.25", default-features = false, features = ["png"] }
png = { version = "0.17", default-features = false }
