[package]
name = "bharat-pdf-reader"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS PDF reader"
[dependencies]
bharat-libsurface = { path = "../../libs/libsurface" }
bharat-libcore = { path = "../../libs/libcore" }

[[bin]]
name = "pdf-reader"
path = "src/main.rs"
