[package]
name = "bharat-settings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS system settings"
[dependencies]
bharat-libsurface = { path = "../../libs/libsurface" }
bharat-libcore = { path = "../../libs/libcore" }
toml = { version = "0.8", default-features = false }
