[package]
name = "bharat-satya-theme"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Satya Desktop theme packs — Material-inspired dynamic light/dark/auto"
[dependencies]
bharat-libcore = { path = "../../libs/libcore" }
image = { version = "0.25", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
toml = { version = "0.8", default-features = false }
[features]
default = []
