[package]
name = "bharat-bharatfs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatFS — BharatOS journaling filesystem with COW, snapshots, compression"
[dependencies]
bharat-libcore = { path = "../../libs/libcore" }
bitflags = { version = "2.5", default-features = false }
crc32fast = { version = "1.3", default-features = false }
