[package]
name = "bharat-libaep"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS AI Enhancement Platform"
[dependencies]
bharat-libcore = { path = "../libcore" }
bharat-libcrypto = { path = "../libcrypto" }
bharat-libmath = { path = "../libmath" }
bitflags = { version = "2.5", default-features = false }
