[package]
name = "bharat-libcrypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS cryptography crate — AES-GCM, ChaCha, SHA-2, Ed25519, random"

[dependencies]
bharat-libcore = { path = "../libcore" }
bitflags = { version = "2.5", default-features = false }
spin = { version = "0.9", default-features = false }
sha2 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", default-features = false }
ed25519-dalek = { version = "2.0", default-features = false }
rand = { version = "0.8", default-features = false }
