[package]
name = "bharat-libelf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ELFF parser and linker for BharatOS executable format"
[dependencies]
bharat-libcore = { path = "../libcore" }
bharat-libhal = { path = "../libhal" }
bharat-libmm = { path = "../libmm" }
bitflags = { version = "2.5", default-features = false }
arrayvec = { version = "0.7", default-features = false }
zerocopy = { version = "0.7", default-features = false }
[features]
default = ["relocations", "dynamic"]
relocations = []
dynamic = []
