[package]
name = "bharat-libfs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS kernel VFS layer — BharatFS, procfs, devfs, tmpfs"
[dependencies]
bharat-libcore = { path = "../libcore" }
bharat-libhal = { path = "../libhal" }
bitflags = { version = "2.5", default-features = false }
arrayvec = { version = "0.7", default-features = false }
heapless = { version = "0.7", default-features = false }
crc32fast = { version = "1.3", default-features = false }
postcard = { version = "1.0", default-features = false }
xtra = { version = "0.1", default-features = false }
