[package]
name = "bharat-libhal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS Hardware Abstraction Layer"
[dependencies]
bharat-libcore = { path = "../libcore" }
bitflags = { version = "2.5", default-features = false }
spin = { version = "0.9", default-features = false }
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
uart_16550 = { version = "0.3", default-features = false }
pc-keyboard = { version = "0.8", default-features = false }
