[package]
name = "bharat-libnet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BharatOS TCP/IPv4/IPv6/UDP/TLS networking stack"
[dependencies]
bharat-libcore = { path = "../libcore" }
bharat-libhal = { path = "../libhal" }
bharat-libcrypto = { path = "../libcrypto" }
bitflags = { version = "2.5", default-features = false }
arrayvec = { version = "0.7", default-features = false }
heapless = { version = "0.7", default-features = false }
crossbeam = { version = "0.8", default-features = false }
[features]
default = ["tls_1_3", "ipv6"]
tls_1_3 = []
ipv6 = []
wifi = []
wired = []
